--- a/Google Sheet.html
+++ b/Google Sheet.html
@@ -15,6 +15,12 @@
             <input type="text" name="your-name" id="" placeholder="Name" required>
             <input type="text" name="your-number" id="" placeholder="Number" required>
             <input type="email" name="your-email" id="" placeholder="Email" required>
+            <select name="your-gender" placeholder="Gender" required>
+                <option value="">-- Please choose an option --</option>
+                <option value="Male">Male</option>
+                <option value="Female">Female</option>
+                <option value="Prefer not to tell">Prefer not to tell</option>
+            </select>
             <textarea name="message" id="" rows="7" placeholder="Your Message"></textarea>
             <input type="submit" value="Submit" id="submit">
 
